// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<Tooltip
  onShow={[Function]}
  overlay={
    <i
      className="spinner spinner-margin"
    />
  }
>
  <div
    className="overview-legend  overview-legend-spaced-line"
  >
    issues.leak_period
  </div>
</Tooltip>
`;

exports[`renders 2`] = `
<Tooltip
  onShow={[Function]}
  overlay={
    <ul
      className="text-left"
    >
      <li>
        Foo
        : 
        <DateTooltipFormatter
          date="2017-01-01T11:39:03+0100"
        />
      </li>
      <li>
        Bar
        : 
        <DateTooltipFormatter
          date="2017-02-01T11:39:03+0100"
        />
      </li>
    </ul>
  }
>
  <div
    className="overview-legend  overview-legend-spaced-line"
  >
    issues.leak_period
  </div>
</Tooltip>
`;
